tests/fixtures/invalid/list_pos.py
# Cannot use unary + on List[int]
x: list = +[1, 2, 3]
